# singlefile-archiver

./: .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile.all-in-one  MIGRATION.md  MODULE_IMPORT_FIX.md  README.md  container_startup_cli.sh  debug_docker_service.py  debug_enhanced_function.py  debug_pattern_analysis.py  debug_step_by_step.py  demo_enhanced_rename.py  docker-compose.example.yml  docker-compose.yml  docker_management_cli.sh  pyproject.toml  run_optimize.py  test_batch_improvements.py  test_comprehensive_fix_validation.py  test_comprehensive_validation.py  test_improved_logic.py  test_length_filtering_simple.py  test_user_reported_cases.py
data/: README.md
docs/: DOCKER_LIVE_UPDATES.md  FEATURE_SPEC.md  PLAN.md  PRIVACY_AUDIT_REPORT.md  PRIVACY_FIX_SUMMARY.md  PRIVACY_VERIFICATION.md  REQUIRES.md  RESTRUCTURING_SUMMARY.md  TASKS.md  stack-fingerprint.md
scripts/: Dockerfile.monitor-cli  Dockerfile.singlefile-python  demo_filename_optimization.py  docker-compose.dev.yml  docker-compose.yml  install.sh  migrate_to_cli.sh  singlefile-archiver
scripts/macos/launchd/: singlefile-archiver.plist.template
src/singlefile_archiver/: __init__.py  cli.py  version.py
src/singlefile_archiver/commands/: __init__.py  __main__.py  optimize.py
src/singlefile_archiver/common/: cookie_update_bridge.py
src/singlefile_archiver/core/: archive.py  docker.py  monitor.py  retry.py  test.py
src/singlefile_archiver/plugins/: __init__.py
src/singlefile_archiver/services/: cookie_fetcher.py  csv_processor.py  docker_service.py  file_monitor.py  writer.py
src/singlefile_archiver/utils/: config.py  logging.py  paths.py
tests/: test_conflict_resolution.py  test_current_byte_lengths.py  test_current_issues.py  test_end_to_end_fix.py  test_enhanced_content_preservation.py  test_extreme_cases.py  test_filename_optimization.py  test_final_validation.py  test_fixed_implementation.py  test_length_filtering_validation.py  test_truly_extreme.py  test_twitter_dedup_failure.py
