[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "singlefile-archiver"
version = "0.1.0"
description = "A comprehensive SingleFile URL archiving system with batch processing, file monitoring, and retry mechanisms"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["cli", "archiver", "singlefile", "url", "docker"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving",
    "Topic :: Utilities",
]
dependencies = [
    "typer[all]>=0.12.0",
    "docker>=7.1.0",
    "watchdog>=4.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/singlefile-archiver"
Repository = "https://github.com/yourusername/singlefile-archiver"
Issues = "https://github.com/yourusername/singlefile-archiver/issues"

[project.scripts]
singlefile-archiver = "singlefile_archiver.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/singlefile_archiver"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/scripts",
    "/README.md",
    "/CHANGELOG.md",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.ruff]
target-version = "py38"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true